--- a/app/views/galleries/new.html.erb
+++ b/app/views/galleries/new.html.erb
@@ -3,6 +3,9 @@
 		<%= f.label :name %><br>
 		<%= f.text_field :name %>
 	</div>
+	<div class="field">
+		<%= f.file_field :image %>
+	</div>
 	<div class="actions">
 		<%= f.submit "Add" %>
 	</div>
