Still issues with the listing without an ID

--- a/app/views/galleries/_gallery.html.erb
+++ b/app/views/galleries/_gallery.html.erb
@@ -1,6 +1,6 @@
 <%= div_for gallery do %>
 	<h3>
-		<%= gallery.name %> &lt;<%= gallery.email %>&gt; said:
+		<%= gallery.name %>&gt; said:
 		<span class="actions">
 			<%= link_to 'Delete', [@listing, gallery], confirm: "You for real?", method: :delete %>
 		</span>
