made changes to controller with a couple of issues

--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -1,4 +1,4 @@
-<%= div_for listing do %>
+<% @listing.each do |listing| %>
 	<h3>
 		<%= image_tag listing.image.url(:thumb) %>
 		<%= link_to listing.title, listing %>
