--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,7 @@
             <%= link_to "Sign Up!", new_user_registration_path %>
           <% else %>
             <%= link_to "List your place", new_listing_path, class: "btn btn-large btn-primary center" %>
+            <%= link_to "Signout", destroy_user_session_path %>
           <% end %>
         </ul>
       </nav>
